CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(pyuprofile LANGUAGES CXX)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)

# Build cppuprofile library
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../lib ${CMAKE_CURRENT_BINARY_DIR}/lib)
IF (GPU_MONITOR_NVIDIA)
  ADD_DEFINITIONS(-DGPU_MONITOR_NVIDIA)
ENDIF()

# Build python package
CMAKE_POLICY(SET CMP0057 NEW)
SET(PYBIND11_FINDPYTHON ON)
FIND_PACKAGE(pybind11 CONFIG REQUIRED)
PYBIND11_ADD_MODULE(${PROJECT_NAME} ext.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC cppuprofile)
SET_TARGET_PROPERTIES(${PROJECT_NAME}  PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
